# frontendC

./: .gitignore  CMakeLists.txt
assets/.programcache/: servers
include/: GPUManager.h  drawScreen.h  panelInfo.h  profileManager.h  renderer.h  serverManager.h  stringType.h
libs/: GPUManager.c  drawScreen.c  profileManager.c  renderer.c  renderer.cpp  serverManager.c
shaders/: roundRect.frag  roundRect.vert
src/: main.c  main.cpp
